IVYPORTAL-8866: Refactor PortalChat using Serenity II  - handle feedback: fix alignment
Former-commit-id: 94fd051fff90fee5d85cd62dad9fe7afbae38cd8

--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/chat.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/chat.css
@@ -485,5 +485,5 @@ _:-ms-fullscreen, :root .chat-message {
 
 .close-chat .ui-button.ui-button-icon-only .ui-icon {
   margin-left: -9px;
-  margin-top: -8px;
+  margin-top: -6px;
 }
